clusters/common/apps/tailscale-system/app/derp-client/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${LOCATION}-derp-client
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ${LOCATION}-derp-client
  template:
    metadata:
      labels:
        app: ${LOCATION}-derp-client
    spec:
      serviceAccountName: "tailscale"
      containers:
      - name: tailscale
        imagePullPolicy: IfNotPresent
        image: "ghcr.io/tailscale/tailscale:v1.98.3"
        ports:
        - name: metrics
          containerPort: 9002
          protocol: TCP
